--- a/In-Class_Ex/In-Class_Ex_04/In-Class_Ex_04.qmd
+++ b/In-Class_Ex/In-Class_Ex_04/In-Class_Ex_04.qmd
@@ -6,7 +6,7 @@ Format: html
 ---
 
 ```{r}
-pacman::p_load(plotly, DT, patchwork, tidyverse)
+pacman::p_load(plotly, DT, patchwork, ggstatsplot, tidyverse)
 ```
 
 ```{r}
@@ -21,6 +21,7 @@ plot_ly(data = exam_data, # don't have to define aes(), but need to add ~
 ```
 
 ```{r}
+
 p <- ggplot(data=exam_data, 
             aes(x = MATHS,
                 y = ENGLISH)) +
@@ -28,4 +29,60 @@ p <- ggplot(data=exam_data,
   coord_cartesian(xlim=c(0,100),
                   ylim=c(0,100))
 ggplotly(p) #<<
+```
+
+```{r}
+library(ggstatsplot)
+```
+
+```{r}
+ggbetweenstats(
+  data=exam_data,
+  x=GENDER,
+  y=MATHS,
+  type="p",
+  message=FALSE
+)
+```
+
+```{r}
+ggscatterstats(
+  data=exam_data,
+  x=MATHS,
+  y=ENGLISH,
+  marginal=FALSE
+)
+```
+
+```{r}
+my_sum <- exam_data %>%
+  group_by(RACE) %>%
+  summarise(
+    n=n(),
+    mean=mean(MATHS),
+    sd=sd(MATHS)
+  )%>%
+  mutate(se=sd/sqrt(n-1))
+
+my_sum
+```
+
+```{r}
+ggplot(my_sum) +
+  geom_errorbar(
+    aes(x=RACE,
+        ymin=mean-se,
+        ymax=mean+se),
+    width=0.2,
+    colour="black",
+    alpha=0.9,
+    size=0.5
+  )+
+  geom_point(aes
+             (x=RACE,
+               y=mean),
+             stat="identity",
+             color="red",
+             size=1.5,
+             alpha=1)
 ```
